@@ -13,6 +13,7 @@ Changelog for 1.3.21
 * Saving a part now returns to editing the same part (Chris T, h/t Brian W)
 * If pos.conf.pl is not found, now returns an intelligible error (Chris T)
 * Adding action/id div to top of many screens (Chris T, h/t Erik H)
+* File->get_for_template now gets most recent parts image (Chris T)
 
 Changelog for 1.3.20
 * Fixes for es_AR translation, duplicate keys removed (Andres B)
